--- a/site/style.scss
+++ b/site/style.scss
@@ -1,10 +1,10 @@
 @use "../abstracts/index" as *;
 
 $board--clr: #B6E2D3;
-$board-hover--clr: #b8ddd1;
+$board-hover--clr: #a5d1c6;
 $bg--clr: #FAE8E0;
 $character--clr: #D8A7B1;
-$font--clr: #444;
+$font--clr: #7a607c;
 
 :root {
   font-size: 20px;
