changed some colors and added animation on the characters

--- a/site/style.css
+++ b/site/style.css
@@ -25,7 +25,7 @@
 .body {
   height: 100vh;
   width: 100vw;
-  background: #FAE8E0;
+  background: #f6ffe8;
   position: relative;
 }
 
@@ -35,18 +35,19 @@
   background: transparent;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(3, 1fr);
-  gap: 0.1rem;
+  gap: 0.3rem;
 }
 
 .position {
   height: 100%;
   width: 100%;
-  background: #B6E2D3;
+  border: solid thin #fff;
+  background: rgba(182, 226, 211, 0.4);
   cursor: pointer;
   transition: 100ms;
 }
 .position:hover {
-  background: #a5d1c6;
+  background: rgba(127, 192, 173, 0.4);
 }
 
 .x {
@@ -57,7 +58,9 @@
   position: absolute;
   width: 4%;
   height: 50%;
-  background: #D8A7B1;
+  background: #fca6b7;
+  -webkit-animation: animate 100ms forwards;
+          animation: animate 100ms forwards;
 }
 .x::before {
   content: "";
@@ -80,7 +83,9 @@
   width: 50%;
   border-radius: 50%;
   background: transparent;
-  border: solid thick #D8A7B1;
+  border: solid thick #fca6b7;
+  -webkit-animation: appear 100ms forwards;
+          animation: appear 100ms forwards;
 }
 
 .winner {
@@ -89,4 +94,22 @@
   position: absolute;
   bottom: 1rem;
   font-weight: 700;
+}
+
+@-webkit-keyframes appear {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes appear {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
