--- a/site/style.css
+++ b/site/style.css
@@ -25,7 +25,7 @@
 .body {
   height: 100vh;
   width: 100vw;
-  background: #f6ffe8;
+  background: #5885AF;
   position: relative;
 }
 
@@ -41,13 +41,12 @@
 .position {
   height: 100%;
   width: 100%;
-  border: solid thin #fff;
-  background: rgba(182, 226, 211, 0.4);
+  background: #41729F;
   cursor: pointer;
   transition: 100ms;
 }
 .position:hover {
-  background: rgba(127, 192, 173, 0.4);
+  background: #2a5279;
 }
 
 .x {
@@ -58,9 +57,9 @@
   position: absolute;
   width: 4%;
   height: 50%;
-  background: #fca6b7;
-  -webkit-animation: animate 100ms forwards;
-          animation: animate 100ms forwards;
+  background: #daf9ff;
+  -webkit-animation: appear 100ms forwards;
+          animation: appear 100ms forwards;
 }
 .x::before {
   content: "";
@@ -83,14 +82,14 @@
   width: 50%;
   border-radius: 50%;
   background: transparent;
-  border: solid thick #fca6b7;
+  border: solid thick #daf9ff;
   -webkit-animation: appear 100ms forwards;
           animation: appear 100ms forwards;
 }
 
 .winner {
   font-size: 1rem;
-  color: #7a607c;
+  color: #daf9ff;
   position: absolute;
   bottom: 1rem;
   font-weight: 700;
