--- a/site/style.scss
+++ b/site/style.scss
@@ -1,10 +1,10 @@
 @use "../abstracts/index" as *;
 
-$board--clr: rgba(182, 226, 211, .4);
-$board-hover--clr: rgba(127, 192, 173, 0.4);
-$bg--clr: #f6ffe8;
-$character--clr: #fca6b7;
-$font--clr: #7a607c;
+$board--clr: #41729F;
+$board-hover--clr: #2a5279;
+$bg--clr: #5885AF;
+$character--clr: #daf9ff;
+$font--clr: #daf9ff;
 
 :root {
   font-size: 20px;
@@ -32,7 +32,6 @@ $font--clr: #7a607c;
 .position {
   height: 100%;
   width: 100%;
-  border: solid thin #fff;
   background: $board--clr;
   cursor: pointer;
   transition: 100ms;
@@ -50,7 +49,7 @@ $font--clr: #7a607c;
     width: 4%;
     height: 50%;
     background: $character--clr;
-    animation: animate 100ms forwards;
+    animation: appear 100ms forwards;
   }
 
   @include pseudo($loc: before) {
