--- a/site/style.css
+++ b/site/style.css
@@ -30,8 +30,10 @@
 }
 
 .board {
-  height: 20rem;
-  width: 20rem;
+  height: 40vw;
+  width: 40vw;
+  max-height: 20rem;
+  max-width: 20rem;
   background: transparent;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(3, 1fr);
@@ -152,9 +154,9 @@
     height: 50%;
   }
 }
-@media (max-width: 600px) {
+@media (max-width: 700px) {
   .board {
-    height: 45%;
-    width: 80%;
+    height: 80vw;
+    width: 80vw;
   }
 }
