--- a/site/style.scss
+++ b/site/style.scss
@@ -20,8 +20,10 @@ $x--clr: #1b0a0c;
 }
 
 .board {
-  height: 20rem;
-  width: 20rem;
+  height: 40vw;
+  width: 40vw;
+  max-height: 20rem;
+  max-width: 20rem;
   background: transparent;
   @extend %grid-center;
   grid-template-columns: repeat(3, 1fr);
@@ -118,9 +120,9 @@ $x--clr: #1b0a0c;
   }
 }
 
-@media (max-width: 600px) {
+@media (max-width: 700px) {
   .board {
-    height: 45%;
-    width: 80%;
+    height: 80vw;
+    width: 80vw;
   }
 }
