--- a/site/style.scss
+++ b/site/style.scss
@@ -20,10 +20,8 @@ $x--clr: #1b0a0c;
 }
 
 .board {
-  height: 40vw;
-  width: 40vw;
-  max-height: 20rem;
-  max-width: 20rem;
+  height: 20rem;
+  width: 20rem;
   background: transparent;
   @extend %grid-center;
   grid-template-columns: repeat(3, 1fr);
@@ -122,7 +120,7 @@ $x--clr: #1b0a0c;
 
 @media (max-width: 700px) {
   .board {
-    height: 80vw;
-    width: 80vw;
+    height: min(20rem, 80vw);
+    width: min(20rem, 80vw);
   }
 }
