--- a/abstracts/_index.scss
+++ b/abstracts/_index.scss
@@ -1,4 +1,4 @@
-@forward "../abstracts/reset.scss";
-@forward "../abstracts/center.scss";
-@forward "../abstracts/weight.scss";
-@forward "../abstracts/pseudo.scss";
+@forward "./abstracts/reset.scss";
+@forward "./abstracts/center.scss";
+@forward "./abstracts/weight.scss";
+@forward "./abstracts/pseudo.scss";
